ALLCLEAR-162 wrapping Button styles in .button-container to prevent leaks

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -85,7 +85,7 @@ button {
   }
 
   /* .onboarding-body button*/
-  button {
+  .button-container button {
     padding: 12px 16px;
     line-height: 22px;
     letter-spacing: -0.41px;
